--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta http-equiv="refresh" content="1; url=docs" /></head><body><script>window.location.href="docs";</script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="1; url=docs" />
+  </head>
+  <body>
+    <script>window.location.href="docs";</script>
+  </body>
+</html>
